--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Stepin tolearn for better human and AI</title>
   </head>
   <body>
-    <h1>Welcome to My Static Webpage!</h1>
-    <p>This site is hosted with GitHub Pages.</p>
+    <h1>Welcome to My Initial Static Webpage!</h1>
+    <p>This site is hosted with GitHub Pages. More coming, Stay tuned .... ...</p>
   </body>
 </html>
