--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Welcome to My Initial Static Webpage!</h1>
-    <p>This site is hosted with GitHub Pages. More coming, Stay tuned .... ...</p>
+    <p>Main lead contributor : Pratyush Mohanty(Texas) and Advik Pradhan(California)</p>
+    <p>More coming, Stay tuned .... ...</p>
   </body>
 </html>
