Lets test aain a commit with Thanks
Easy

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Welcome to My Initial Static Webpage!</h1>
     <p>Main lead contributor : Pratyush Mohanty(Texas) and Advik Pradhan(California)</p>
     <p>More coming, Stay tuned .... ...</p>
+    <p>Thnaks</p>
   </body>
 </html>
