--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Welcome to My Initial Static Webpage!</h1>
     <p>Main lead contributor : Pratyush Mohanty(Texas) and Advik Pradhan(California)</p>
-    <p>More coming, Stay tuned .... ...</p>
-    <p>Thnaks</p>
+    <p>More coming, Stay tuned .</p>
+    <p>Thanks</p>
   </body>
 </html>
