--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Stepin tolearn for better human and AI</title>
-  </head>
-  <body>
-    <h1>Welcome to My Initial Static Webpage!</h1>
-    <p>Main lead contributor : Pratyush Mohanty(Texas) and Advik Pradhan(California)</p>
-    <p>More coming, Stay tuned .</p>
-    <p>Thanks</p>
-  </body>
+<head>
+  <title>English → Odia Translator</title>
+</head>
+<body>
+  <h2>Translate English to Odia</h2>
+  <textarea id="inputText" rows="4" cols="50" placeholder="Enter English text"></textarea><br><br>
+  <button onclick="translateText()">Translate</button>
+  <p><strong>Odia Translation:</strong></p>
+  <div id="output"></div>
+
+  <script>
+    async function translateText() {
+      const input = document.getElementById("inputText").value;
+
+      const response = await fetch(
+        "https://api-inference.huggingface.co/models/facebook/nllb-200-distilled-600M",
+        {
+          method: "POST",
+          headers: {
+            "Authorization": "Bearer YOUR_HF_API_TOKEN",  // free token
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            inputs: input,
+            parameters: { src_lang: "eng_Latn", tgt_lang: "ori_Orya" }
+          }),
+        }
+      );
+
+      const data = await response.json();
+      document.getElementById("output").innerText = data[0]?.translation_text || "Error";
+    }
+  </script>
+</body>
 </html>
+
