--- a/index.html
+++ b/index.html
@@ -5,34 +5,54 @@
 </head>
 <body>
   <h2>Translate English to Odia</h2>
+
+  <!-- User enters their Hugging Face token -->
+  <label for="token">As of now its under construction. So please Enter your Hugging Face token:</label><br>
+  <input type="password" id="token" placeholder="hf_xxxYourTokenxxx"><br><br>
+
   <textarea id="inputText" rows="4" cols="50" placeholder="Enter English text"></textarea><br><br>
   <button onclick="translateText()">Translate</button>
+
   <p><strong>Odia Translation:</strong></p>
   <div id="output"></div>
 
   <script>
     async function translateText() {
+      const token = document.getElementById("token").value.trim();
+      if (!token) {
+        alert("Please enter your Hugging Face token!");
+        return;
+      }
+
       const input = document.getElementById("inputText").value;
 
-      const response = await fetch(
-        "https://api-inference.huggingface.co/models/facebook/nllb-200-distilled-600M",
-        {
-          method: "POST",
-          headers: {
-            "Authorization": "Bearer YOUR_HF_API_TOKEN",  // free token
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            inputs: input,
-            parameters: { src_lang: "eng_Latn", tgt_lang: "ori_Orya" }
-          }),
-        }
-      );
+      try {
+        const response = await fetch(
+          "https://api-inference.huggingface.co/models/facebook/nllb-200-distilled-600M",
+          {
+            method: "POST",
+            headers: {
+              "Authorization": `Bearer ${token}`,
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              inputs: input,
+              parameters: { src_lang: "eng_Latn", tgt_lang: "ori_Orya" }
+            }),
+          }
+        );
 
-      const data = await response.json();
-      document.getElementById("output").innerText = data[0]?.translation_text || "Error";
+        const data = await response.json();
+
+        if (data.error) {
+          document.getElementById("output").innerText = "Error: " + data.error;
+        } else {
+          document.getElementById("output").innerText = data[0]?.translation_text || "No result";
+        }
+      } catch (err) {
+        document.getElementById("output").innerText = "Error: " + err.message;
+      }
     }
   </script>
 </body>
 </html>
-
